<resources>
    <string name="app_name">Animiru</string>
    <string name="menu_biblio">Ma bibliothéque</string>
    <string name="menu_ajout">Ajout d\'un anime</string>
    <string name="menu_top">Mon Top 10</string>
    <string name="desc_search">Bouton recherche</string>
    <string name="desc_logo">Logo de l\'application</string>
    <string name="desc_ajout">Bouton qui permet d\'ajouter un anime dans sa bibliothéque</string>
    <string name="synopsis">Synopsis du dernier épisode :</string>
    <string name="prog">Progression :</string>
    <string name="anime">Variable</string>
    <string name="genre">Variable</string>
    <string name="ep">Variable</string>
    <string name="filtre">Trier par</string>
    <string name="infos">Information</string>
    <string name="ep_menus">Episodes</string>
    <string name="Synopsis">Variable</string>
    <string name="title_nb_ep">Numbers of episode :</string>
    <string name="title_Syn">Synopsis :</string>
    <string name="title_Genres">Genres :</string>
    <string name="title_Studio">Studio :</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>