<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/ic_launcher_background">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_launcher_background"
        tools:context=".ui.biblio.bibliotheque">

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <ImageView
                    android:id="@+id/manga"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:id="@+id/title"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/manga"
                    android:textStyle="bold"
                    android:text="@string/anime"
                    android:textSize="30sp"
                    android:textColor="@color/white" />
            </RelativeLayout>
            <TextView
                android:id="@+id/menu_ep"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:translationX="-75dp"
                android:layout_below="@+id/header"
                android:text="@string/ep_menus"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/info"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_below="@+id/header"
                android:layout_toEndOf="@+id/menu_ep"
                android:text="@string/infos"
                android:textSize="20sp"
                android:textColor="@color/rose" />

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_below="@+id/menu_ep"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:scrollbars="none">

                <RelativeLayout
                    android:id="@+id/info_global"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/ep"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:scrollbars="vertical">

                    <RelativeLayout
                        android:id="@+id/cate_ep"
                        android:layout_width="350dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginVertical="30dp"
                        android:background="@drawable/rectangle"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/Ep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/title_nb_ep"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/total_ep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Ep"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/ep"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/cate_Syn"
                        android:layout_width="350dp"
                        android:layout_height="450dp"
                        android:layout_below="@+id/cate_ep"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rectangle"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/Synopsis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/title_Syn"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/total_syn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Synopsis"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:maxLines="20"
                            android:ellipsize="end"
                            android:text="@string/Synopsis"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/cate_Genres"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        android:layout_below="@+id/cate_Syn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginVertical="35dp"
                        android:background="@drawable/rectangle"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/Genres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/title_Genres"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/total_gen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Genres"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/Synopsis"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/cate_Studio"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        android:layout_below="@+id/cate_Genres"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rectangle"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/Studio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/title_Studio"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/total_stud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Studio"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/Synopsis"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>

