<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/ic_launcher_background">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_launcher_background"
        tools:context=".ui.biblio.bibliotheque">

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <ImageView
                    android:id="@+id/manga"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:startColor="#80000000"
                    android:endColor="#00000000"
                    android:angle="90"
                    android:src="@drawable/test"
                    android:alpha="0.5"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:id="@+id/title"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/manga"
                    android:textStyle="bold"
                    android:text="@string/anime"
                    android:textSize="30sp"
                    android:textColor="@color/white" />
            </RelativeLayout>
            <TextView
                android:id="@+id/ep"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:translationX="-75dp"
                android:layout_below="@+id/header"
                android:text="@string/ep_menus"
                android:textSize="20sp"
                android:textColor="@color/rose" />

            <TextView
                android:id="@+id/menu_info"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_below="@+id/header"
                android:layout_toEndOf="@+id/ep"
                android:text="@string/infos"
                android:textSize="20sp"
                android:textColor="@color/white" />

        <RelativeLayout
            android:id="@+id/cate_ep"
            android:layout_width="350dp"
            android:layout_centerHorizontal="true"
            android:layout_height="200dp"
            android:layout_marginVertical="30dp"
            android:layout_below="@+id/ep"
            android:padding="5dp"
            android:background="@drawable/rectangle">


            <TextView
                android:id="@+id/titre"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/genre"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/banniere"
                android:layout_below="@+id/titre"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/test" />
            <ImageView
                android:id="@+id/banniere2"
                android:layout_toEndOf="@+id/banniere"
                android:layout_below="@+id/titre"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/test" />
            <ImageView
                android:id="@+id/banniere3"
                android:layout_toEndOf="@+id/banniere2"
                android:layout_below="@+id/titre"
                android:layout_width="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_height="match_parent"
                android:src="@drawable/test" />
        </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>

