<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/anime1"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:background="@drawable/rectangle">
    <ImageView
        android:id="@+id/suppr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ann"
        android:layout_toEndOf="@id/banniere"
        android:layout_marginHorizontal="190dp"/>

    <ImageView
        android:id="@+id/banniere"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_centerVertical="true"
        android:src="@drawable/test" />

    <TextView
        android:id="@+id/titre"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/banniere"
        android:layout_marginHorizontal="10dp"
        android:text="@string/anime"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/nbep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/banniere"
        android:layout_below="@+id/titre"
        android:layout_marginHorizontal="10dp"
        android:text="100ep"
        android:textSize="9sp"
        android:textColor="@color/gris" />
    <TextView
        android:id="@+id/synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/banniere"
        android:layout_below="@+id/nbep"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/synopsis"
        android:textSize="9sp"
        android:textColor="@color/gris" />
    <TextView
        android:id="@+id/ep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/banniere"
        android:layout_below="@+id/synopsis"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="ep"
        android:textSize="9sp"
        android:textColor="@color/gris" />
    <TextView
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/banniere"
        android:layout_below="@+id/ep"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/prog"
        android:textSize="9sp"
        android:textColor="@color/gris" />

    <ProgressBar
        android:id="@+id/progbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prog"
        android:layout_marginHorizontal="10dp"
        android:layout_toEndOf="@+id/banniere"
        android:progress="50"
        android:progressTint="#CE15C7" />
<<<<<<< HEAD

</RelativeLayout>
=======
</RelativeLayout>

    <ScrollView
        android:id="@+id/scrollQuerr2y"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:scrollbars="vertical">

    </ScrollView>



>>>>>>> 270f1a8 (stockage)
